需求[#18721]  AR-20200706-04-15 运维管理模块报表管理-查询报表接口开发
    [修改内容]: 修改报表记录查询
    [描述说明]:
    [问题原因]:
    [解决方法]:
    [测试建议]:

Change-Id: Id4b0eb5012183b6501a059372eec6229ad1909a1