@@ -8,14 +8,17 @@ import com.yjh.platform.common.utils.Report.ReportHelper;
 import com.yjh.platform.module.task.controller.ReportManageController;
 import com.yjh.platform.module.task.dao.ReportManageDao;
 import com.yjh.platform.module.task.entity.*;
+import org.apache.bcel.generic.RET;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStreamReader;
 import java.text.SimpleDateFormat;
 import java.util.*;
 
@@ -32,7 +35,7 @@ public class ReportManageService {
     private DateTimeUtil dateTimeUtil;
     @Logs(title = "生成报表", code = "reportManage",content = "根据web传递的参数生成不同的报表")
     @Transactional(rollbackFor = Exception.class)
-    public List<TCruiseDataResultDetail> reportGenerate(Date startTime,Date endTime,String deviceIdList,String reportName,String reportType,String reportPath) {
+    public int reportGenerate(Date startTime,Date endTime,String deviceIdList,String reportName,String reportType,String reportPath) {
         List<String> list = Arrays.asList(deviceIdList.split(","));
         //巡检记录报表对象
         ReportData recordData = new ReportData();
@@ -71,8 +74,8 @@ public class ReportManageService {
         String nowTime = f.format(date);
 
 //        String fileName = nowTime+"-"+reportType+".xlsx";
-//        String reportPath2 = "D:/MyDocuments/workspace_idea/IotCenterDev/templateFile/"+fileName;
         String fileName = reportName+"-"+nowTime+"-"+reportType+".xlsx";
+//        String reportPath2 = "D:/MyDocuments/workspace_idea/IotCenterDev/templateFile/"+fileName;
         String reportPath2 = reportPath+"/"+fileName;
         log.info("reportPath2:"+reportPath2);
         File file = new File(reportPath2);
@@ -92,8 +95,25 @@ public class ReportManageService {
 //        }
 //        log.info("rename success.... ");
 //        DownloadUtil.downloadFile(reportPath, file.getName(), response, request);
-
-        return tCDRDList;
+//        String url = "ls "+reportPath+" | wc -w";
+//        long count = 0;
+//        try {
+//            Process process = Runtime.getRuntime().exec(new String[]{"sh", "-c", url});
+//            BufferedReader readerForId = new BufferedReader(new InputStreamReader(process.getInputStream(), "UTF-8"));
+//            String lineForId = null;
+//            while ((lineForId = readerForId.readLine()) != null) {
+//                 count = Long.parseLong(lineForId);
+//            }
+//        } catch (IOException e) {
+//            e.printStackTrace();
+//        }
+        TReportInfo reportInfo = new TReportInfo();
+        reportInfo.setReportName(reportName);
+        reportInfo.setReportType(reportType);
+        reportInfo.setGenerateDate(date);
+        reportInfo.setRemarks("");
+        int res = reportManageDao.insertReport(reportInfo);
+        return res;
     }
     @Logs(title = "下载报表", code = "reportManage",content = "通过web传递的参数下载报表")
     @Transactional(rollbackFor = Exception.class)
@@ -105,111 +125,157 @@ public class ReportManageService {
         log.info("filePath:"+filePath);
         return filePath;
     }
+//    @Logs(title = "查询报表生成记录", code = "reportManage",content = "通过web传递的参数查询报表记录")
+//    @Transactional(rollbackFor = Exception.class)
+//    public List<TReportInfo> reportSelect(String queryStr,String startTime,String endTime,String reportPath) {
+//        HashMap<String, Object> map = new HashMap<>();
+//        List<TReportInfo> fileNameList = new ArrayList<>();//文件名列表
+//        List<String> folderNameList = new ArrayList<>();//文件夹名列表
+//
+//        String startTimeTemp = DateTimeUtil.changeTime2(startTime);//yyyyMMddHHmmss
+//        String endTimeTemp = DateTimeUtil.changeTime2(endTime);//yyyyMMddHHmmss
+//
+//        String folderPath = "D:/MyDocuments/workspace_idea/IotCenterDev/templateFile/";
+////        File f = new File(reportPath+"/");
+//        File f = new File(reportPath);
+//
+//
+//        if (!f.exists()) { //路径不存在
+//            map.put("retType", "1");
+//        }else{
+//            boolean flag = f.isDirectory();
+//            if(flag==false){ //路径为文件
+//                map.put("retType", "2");
+//                map.put("fileName", f.getName());
+//            }else{ //路径为文件夹
+//                map.put("retType", "3");
+//                File fa[] = f.listFiles();
+//                queryStr = queryStr==null ? "" : queryStr;//若queryStr传入为null,则替换为空（indexOf匹配值不能为null）
+//                for (int i = 0; i < fa.length; i++) {
+//                    File fs = fa[i];
+//                    if(fs.getName().indexOf(queryStr) != -1){
+//                        if (fs.isDirectory()) {
+//                            folderNameList.add(fs.getName());
+//                        } else {
+//                            TReportInfo reportForms = new TReportInfo();
+//                            String fileName = fs.getName();
+//                            String str[] = fileName.substring(0,fileName.length()-5).split("-");//根据-分割文件名
+//                            String rName = str[0];
+//                            String rDate = str[1];
+//                            String rType = str[2];
+//                            //没有时间过滤
+//                            if (startTimeTemp == "" && endTimeTemp==""){
+//                                reportForms.setReportName(rName);
+//                                String time2 = DateTimeUtil.changeTime1(rDate);
+////                                reportForms.setGenerateDate(time2);
+//                                reportForms.setReportType(rType);
+//                                fileNameList.add(reportForms);
+//                            }else {
+//                                //时间过滤
+//                                long tTime1 = Long.parseLong(rDate);
+//                                long tTime2 = Long.parseLong(startTimeTemp);
+//                                long tTime3 = Long.parseLong(endTimeTemp);
+//                                if (tTime1 >= tTime2 && tTime1 <= tTime3){
+//                                    reportForms.setReportName(rName);
+//                                    String time2 = DateTimeUtil.changeTime1(rDate);
+////                                    reportForms.setGenerateDate(time2);
+//                                    reportForms.setReportType(rType);
+//                                    fileNameList.add(reportForms);
+//                                }
+//                            }
+//                        }
+//                    }
+//                }
+//                map.put("fileNameList", fileNameList);
+//                map.put("folderNameList", folderNameList);
+//            }
+//        }
+//        log.info("<----------map--------->的值为："+map);
+//        log.info("fileNameList是："+fileNameList);
+//        HashMap<String, Object> selectMap = new HashMap<>();
+//        selectMap.put("reportName",queryStr);
+//        selectMap.put("startTime",startTime);
+//        selectMap.put("endTime",endTime);
+//        List<TReportInfo> fileList = reportManageDao.reportSelect(selectMap);
+//        return fileList;
+//    }
     @Logs(title = "查询报表生成记录", code = "reportManage",content = "通过web传递的参数查询报表记录")
     @Transactional(rollbackFor = Exception.class)
-    public List<ReportForms> reportSelect(String queryStr,String startTime,String endTime,String reportPath) {
+    public List<TReportInfo> reportSelect(String reportName,String startTime,String endTime){
         HashMap<String, Object> map = new HashMap<>();
-        List<ReportForms> fileNameList = new ArrayList<>();//文件名列表
-        List<String> folderNameList = new ArrayList<>();//文件夹名列表
-
-        String startTimeTemp = DateTimeUtil.changeTime2(startTime);//yyyyMMddHHmmss
-        String endTimeTemp = DateTimeUtil.changeTime2(endTime);//yyyyMMddHHmmss
-
-//        String folderPath = "D:/MyDocuments/workspace_idea/IotCenterDev/templateFile/";
-        File f = new File(reportPath+"/");
-
-        if (!f.exists()) { //路径不存在
-            map.put("retType", "1");
-        }else{
-            boolean flag = f.isDirectory();
-            if(flag==false){ //路径为文件
-                map.put("retType", "2");
-                map.put("fileName", f.getName());
-            }else{ //路径为文件夹
-                map.put("retType", "3");
-                File fa[] = f.listFiles();
-                queryStr = queryStr==null ? "" : queryStr;//若queryStr传入为null,则替换为空（indexOf匹配值不能为null）
-                for (int i = 0; i < fa.length; i++) {
-                    File fs = fa[i];
-                    if(fs.getName().indexOf(queryStr) != -1){
-                        if (fs.isDirectory()) {
-                            folderNameList.add(fs.getName());
-                        } else {
-                            ReportForms reportForms = new ReportForms();
-                            String fileName = fs.getName();
-                            String str[] = fileName.substring(0,fileName.length()-5).split("-");//根据-分割文件名
-                            String rName = str[0];
-                            String rDate = str[1];
-                            String rType = str[2];
-                            //没有时间过滤
-                            if (startTimeTemp == "" && endTimeTemp==""){
-                                reportForms.setReportName(rName);
-                                String time2 = DateTimeUtil.changeTime1(rDate);
-                                reportForms.setStartTime(time2);
-                                reportForms.setReportType(rType);
-                                fileNameList.add(reportForms);
-                            }else {
-                                //时间过滤
-                                long tTime1 = Long.parseLong(rDate);
-                                long tTime2 = Long.parseLong(startTimeTemp);
-                                long tTime3 = Long.parseLong(endTimeTemp);
-                                if (tTime1 >= tTime2 && tTime1 <= tTime3){
-                                    reportForms.setReportName(rName);
-                                    String time2 = DateTimeUtil.changeTime1(rDate);
-                                    reportForms.setStartTime(time2);
-                                    reportForms.setReportType(rType);
-                                    fileNameList.add(reportForms);
-                                }
-                            }
-                        }
-                    }
-                }
-                map.put("fileNameList", fileNameList);
-                map.put("folderNameList", folderNameList);
-            }
-        }
-        log.info("<----------map--------->的值为："+map);
-        log.info("fileNameList是："+fileNameList);
-        return fileNameList;
+        map.put("reportName", reportName);
+        map.put("startTime", startTime);
+        map.put("endTime", endTime);
+        return reportManageDao.reportSelect(map);
     }
     @Logs(title = "删除报表", code = "reportManage",content = "通过web传递的参数删除报表记录")
     @Transactional(rollbackFor = Exception.class)
-    public boolean reportDelete(String reportName,String reportType, String startTime,String reportPath) {
+    public int reportDelete(String reportName,String reportType, String startTime,String reportPath) {
+        String url = "ls "+reportPath+" | wc -w";
+        long count = 0;
+        try {
+            Process process = Runtime.getRuntime().exec(new String[]{"sh", "-c", url});
+            BufferedReader readerForId = new BufferedReader(new InputStreamReader(process.getInputStream(), "UTF-8"));
+            String lineForId = null;
+            while ((lineForId = readerForId.readLine()) != null) {
+                count = Long.parseLong(lineForId);
+            }
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+        log.info("删除前文件的个数："+count);
         String timeTemp =  DateTimeUtil.changeTime2(startTime);
         String fileName = reportName+"-"+timeTemp+"-"+reportType+".xlsx";
 //        String filePath = "D:/MyDocuments/workspace_idea/IotCenterDev/templateFile/"+fileName;
         String filePath = reportPath+"/"+fileName;
         log.info("filePath:"+filePath);
-        String url = "rm -f "+filePath;
+        String url2 = "rm -f "+filePath;
         try {
-            Process processForId = Runtime.getRuntime().exec(url);
+            Process processForId = Runtime.getRuntime().exec(url2);
             processForId.waitFor();
         } catch (Exception e) {
             e.getMessage();
         }
-        return true;
-    }
-    @Logs(title = "批量删除报表", code = "reportManage",content = "通过web传递的参数批量删除报表记录")
-    @Transactional(rollbackFor = Exception.class)
-    public boolean reportBatchDelete(String reportPath,List<ReportForms> fileNameList) {
-        for (ReportForms res:fileNameList) {
-            String reportName = res.getReportName();
-            String reportType = res.getReportType();
-            String startTime = res.getStartTime();
-            String time2 =  DateTimeUtil.changeTime2(startTime);
-            String fileName = reportName+"-"+time2+"-"+reportType+".xlsx";
-            String filePathAndName = reportPath+"/"+fileName;
-//           String filePathAndName = "D:/MyDocuments/workspace_idea/IotCenterDev/templateFile/"+fileName;
-           String url = "rm -f "+filePathAndName;
-            try {
-                Process processForId = Runtime.getRuntime().exec(url);
-                processForId.waitFor();
-            } catch (Exception e) {
-                e.getMessage();
+        String url3 = "ls "+reportPath+" | wc -w";
+        long count2 = 0;
+        try {
+            Process process = Runtime.getRuntime().exec(new String[]{"sh", "-c", url3});
+            BufferedReader readerForId = new BufferedReader(new InputStreamReader(process.getInputStream(), "UTF-8"));
+            String lineForId = null;
+            while ((lineForId = readerForId.readLine()) != null) {
+                count = Long.parseLong(lineForId);
             }
+        } catch (IOException e) {
+            e.printStackTrace();
         }
-        return  true;
+        log.info("删除后文件的个数："+count2);
+        int res = 0;
+        if (count - 1 == count2){
+            res = reportManageDao.reportDelete(reportName,startTime);
+        }
+        return res;
     }
+//    @Logs(title = "批量删除报表", code = "reportManage",content = "通过web传递的参数批量删除报表记录")
+//    @Transactional(rollbackFor = Exception.class)
+//    public boolean reportBatchDelete(String reportPath,List<TReportInfo> fileNameList) {
+//        for (TReportInfo res:fileNameList) {
+//            String reportName = res.getReportName();
+//            String reportType = res.getReportType();
+//            Date startTime = res.getGenerateDate();
+//            String time2 =  DateTimeUtil.changeTime2(startTime);
+//            String fileName = reportName+"-"+time2+"-"+reportType+".xlsx";
+//            String filePathAndName = reportPath+"/"+fileName;
+//           String filePathAndName = "D:/MyDocuments/workspace_idea/IotCenterDev/templateFile/"+fileName;
+//           String url = "rm -f "+filePathAndName;
+//            try {
+//                Process processForId = Runtime.getRuntime().exec(url);
+//                processForId.waitFor();
+//            } catch (Exception e) {
+//                e.getMessage();
+//            }
+//        }
+//        return  true;
+//    }
     @Logs(title = "下载报告", code = "reportManage",content = "根据巡检任务生成报告并下载")
     @Transactional(rollbackFor = Exception.class)
     public String reportByTask(String taskId,String temporaryPath){
@@ -248,21 +314,21 @@ public class ReportManageService {
         String taskName = recordData.getTaskVO().getTaskName();
         String cruiseDate = dateTimeUtil.format(recordData.getTaskVO().getCruiseDate());
         String reportName =  taskName+ "_" +dateTimeUtil.changeTime2(cruiseDate) + ".xlsx";//报表名称
-        String filePath = "D:/MyDocuments/workspace_idea/IotCenterDev/temporaryFiles/";
-        File temporaryFile = new File(filePath);
+//        String filePath = "D:/MyDocuments/workspace_idea/IotCenterDev/temporaryFiles/";
+        File temporaryFile = new File(temporaryPath);
         String reportPath2 = null;
         if (!temporaryFile.exists() && !temporaryFile.isDirectory())
         {
             System.out.println("不存在");
             temporaryFile.mkdir();
-            reportPath2 = filePath+reportName;
+            reportPath2 = temporaryPath+"/"+reportName;
             File file = new File(reportPath2);
             ContentData contentData = ReportDataRepo.getData(recordData);
             ReportHelper.createDocument(contentData.getRowCount(), contentData.getColumnCount(),
                     contentData.getElements(), file);
         }else {
             System.out.println("存在");
-            reportPath2 = filePath+reportName;
+            reportPath2 = temporaryPath+"/"+reportName;
             File file = new File(reportPath2);
             ContentData contentData = ReportDataRepo.getData(recordData);
             ReportHelper.createDocument(contentData.getRowCount(), contentData.getColumnCount(),
